// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getEntities small xml test 1`] = `
Shrub {
  "entityTable": Immutable.Map {
    "n1": Object {
      "attributes": Object {
        "changeset": "38701677",
        "timestamp": "2016-04-19T17:58:40Z",
        "uid": "592097",
        "user": "Dombo",
        "version": "1",
        "visible": true,
      },
      "id": "n1",
      "loc": Object {
        "lat": 34.530396,
        "lon": 74.1816382,
      },
      "tags": Object {},
      "type": "node",
    },
  },
  "knownIds": Array [
    "n1",
  ],
}
`;

exports[`getEntities small xml test 2`] = `
Shrub {
  "entityTable": Immutable.Map {
    "n2": Object {
      "attributes": Object {
        "changeset": "38701677",
        "timestamp": "2016-04-19T17:58:40Z",
        "uid": "592097",
        "user": "Dombo",
        "version": "1",
        "visible": true,
      },
      "id": "n2",
      "loc": Object {
        "lat": 34.530396,
        "lon": 74.1816382,
      },
      "tags": Object {},
      "type": "node",
    },
    "n1": Object {
      "attributes": Object {
        "changeset": "38701677",
        "timestamp": "2016-04-19T17:58:40Z",
        "uid": "592097",
        "user": "Dombo",
        "version": "1",
        "visible": true,
      },
      "id": "n1",
      "loc": Object {
        "lat": 34.530396,
        "lon": 74.1816382,
      },
      "tags": Object {},
      "type": "node",
    },
    "w1": Object {
      "attributes": Object {
        "changeset": "50089927",
        "timestamp": "2017-07-06T17:19:04Z",
        "uid": "2815653",
        "user": "Srihari Thalla",
        "version": "2",
        "visible": true,
      },
      "id": "w1",
      "nodes": Array [
        "n1",
        "n2",
      ],
      "tags": Object {},
      "type": "way",
    },
  },
  "knownIds": Array [
    "n2",
    "w1",
  ],
}
`;
